--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "cloudinary-react": "^1.8.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.22.0",
     "framer-motion": "^9.0.2",
