--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
